--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div id="app"></div>
-    <script type="module" src="app.js"></script>
+    <script type="module" src="./app.js"></script>
 </body>
 
 </html>
