Add info User  | INfo About ...

--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 </head>
 
 <body>
-    <div id="app"></div>
-    <script type="module" src="./app.js"></script>
+    <body>
+  <div id="app"></div>
+  <script type="module" src="./app.js"></script>
+</body>
+
+   
 </body>
 
 </html>
