Add Progress Skill Graph with Css  | disgne Login

--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="styles/vars.css">
+  <link rel="stylesheet" href="styles/base.css">
+  <link rel="stylesheet" href="styles/layout.css">
+  <link rel="stylesheet" href="styles/components/user-info.css">
+  <link rel="stylesheet" href="styles/components/about-user.css">
+  <link rel="stylesheet" href="styles/components/skills-graph.css">
+  <link rel="stylesheet" href="styles/components/login.css">
 
-
-  <title>Document</title>
+  <title>Profile</title>
 </head>
 
 <body>
-
-  <body>
-    <div id="app"></div>
-    <script type="module" src="./app.js"></script>
-  </body>
-
-
+  <div id="app"></div>
+  <script type="module" src="./app.js"></script>
 </body>
 
 </html>
